# neural-network-satellite-failure-prediction

./: .gitignore  README.md  devenv.nix
src/: pyproject.toml
src/scripts/: convert_to_parquet.py  downlod_data.bash
