[project]
name = "neural-network-satellite-failure-prediction"
version = "0.1.0"
description = "A neural network model to predict satellite failures using the ESA dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "polars[pandas]>=1.38.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
